--- a/Get_ViettelSignals.ipynb
+++ b/Get_ViettelSignals.ipynb
@@ -624,7 +624,7 @@
    ],
    "source": [
     "df_final = pd.concat([df, df_signals], axis=1)\n",
-    "df_final.to_csv(filenam)"
+    "df_final.to_csv(\"/path/to/final_files\")"
    ]
   },
   {
